Use Set.of() instead of Collections.unmodifiableSet(Sets.newHashSet()) for NON_DISABLEABLE_SEARCH_PARAMS
Set.of() (Java 9+) is the established pattern in this module (see ResourceMetaParams.java)
and is cleaner and more efficient than the Guava wrapper approach.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>